--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "react-native-maps": "^0.23.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
