feat: added navigation and restructured the project

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,8 @@ target 'RNGoogleMapsTutorial' do
 
   pod 'GoogleMaps'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'RNGoogleMapsTutorialTests' do
     inherit! :search_paths
     # Pods for testing
