--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.6",
-    "react-native-maps": "^0.23.0"
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.23.0",
+    "react-navigation": "^3.5.1"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
